--- a/styles/global.css
+++ b/styles/global.css
@@ -6,8 +6,11 @@
 
 body {
   min-width: 1100px;
+  padding: 0;
   margin: 0;
   font-family: Raleway, sans-serif;
+  overflow-x: hidden;
+  width: 1440px;
 }
 
 h1,
@@ -20,9 +23,13 @@ p,
 ul,
 ol,
 li,
+div,
+address,
+button,
 blockquote {
   margin: 0;
   padding: 0;
+  font: inherit;
 }
 
 a {
