--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,378 @@
-/* место для вашего кода */
+.header {
+  margin: 92px 50px;
+  width: 1340px;
+}
+
+.header__menu {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+}
+
+.header__links-list {
+  justify-self: start;
+  align-self: center;
+  display: flex;
+  list-style: circle;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.header__links-list-item {
+  padding-left: 4px;
+  padding-right: 28px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+  padding-left: 0;
+}
+
+.header__link {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  justify-self: center;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+.header__address {
+  justify-self: end;
+  display: flex;
+  flex-direction: column;
+}
+
+.address {
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.3px;
+}
+
+.address a {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+/* Секция COVER */
+
+.cover {
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 757px;
+  position: relative;
+}
+
+.overlay {
+  background-color: rgb(0, 0, 0, 0.6);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.cover__title {
+  padding-top: 165px;
+  padding-right: 50px;
+  padding-left: 50px;
+  padding-bottom: 0px;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 115px;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  text-align: center;
+  padding-top: 13px;
+  padding-right: 60px;
+}
+
+.aligned-text_right {
+  text-align: right;
+  padding-top: 5px;
+}
+
+.letter__o {
+  padding-left: 30px;
+}
+.letter__e {
+  letter-spacing: 0;
+  padding-left: 30px;
+}
+
+.letters__ado {
+  padding-left: 30px;
+}
+
+.lettes_last {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  height: 52px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 128px;
+}
+
+.cover__description-text {
+  color: #fff;
+  /*text-align: center;*/
+  font-family: Raleway, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+  word-spacing: 17px;
+  padding-right: 83px;
+  padding-left: 422px;
+}
+
+.bet-button {
+  width: 257px;
+  height: 52px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  text-align: center;
+  font-family: Raleway, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+  padding: 12px 32px;
+}
+
+/* СЕКЦИЯ LOTS */
+
+.lots__heading {
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  margin-top: 180px;
+  margin-left: 90px;
+  margin-bottom: 27px;
+}
+
+.lots__card-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
+  list-style: none;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.lots__card-list-item {
+  position: relative;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 450px;
+  width: 430px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 50px 40px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+  position: relative;
+  z-index: 2;
+}
+
+.card__text {
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  position: relative;
+  z-index: 2;
+}
+
+.lots__look-more-link {
+  display: inline-block;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 90px;
+  margin-top: 30px;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+/* CЕКЦИЯ ABOUT */
+
+.about {
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  margin-top: 182px;
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 487px;
+  gap: 25px;
+}
+
+.container_for_logo {
+  padding-left: 95px;
+  padding-right: 95px;
+  width: 430px;
+  height: 240px;
+}
+
+.about__logo {
+  background-color: #000;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  color: #000;
+  font-family: Raleway;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.about__text {
+  color: #000;
+  font-family: Raleway;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.container_with_text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 100px;
+}
+
+/* СЕКЦИЯ FOOTER */
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 180px 50px 90px;
+}
+
+.footer__menu-list {
+  color: #000;
+  text-align: center;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  list-style: none;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.footer__social-icon {
+  width: 100%;
+  height: 100%;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  width: 240px;
+  height: 48px;
+}
