--- a/styles/global.css
+++ b/styles/global.css
@@ -7,9 +7,8 @@
 body {
   min-width: 1100px;
   padding: 0;
-  margin: 0;
+  margin: auto;
   font-family: Raleway, sans-serif;
-  overflow-x: hidden;
   width: 1440px;
 }
 
